--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -1,13 +1,12 @@
 libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
 libs.CopyLibs.displayName=CopyLibs Task
-libs.javaee-endorsed-api-6.0.classpath=\
-    ${base}/javaee-endorsed-api-6.0/javax.annotation.jar;\
-    ${base}/javaee-endorsed-api-6.0/jaxb-api-osgi.jar;\
-    ${base}/javaee-endorsed-api-6.0/webservices-api-osgi.jar
-libs.javaee-endorsed-api-6.0.displayName=Java EE 6 Endorsed API Library
-libs.javaee-endorsed-api-6.0.javadoc=\
-    ${base}/javaee-endorsed-api-6.0/javaee6-doc-api.zip
+libs.jstl11.classpath=\
+    ${base}/jstl11/standard.jar;\
+    ${base}/jstl11/jstl.jar
+libs.jstl11.displayName=JSTL 1.1
+libs.jstl11.javadoc=\
+    ${base}/jstl11/javaee6-doc-api.zip
 libs.spring-framework300.classpath=\
     ${base}/spring-framework300/org-apache-commons-logging.jar;\
     ${base}/spring-framework300/cglib-2.2.jar;\
@@ -32,6 +31,3 @@ libs.spring-framework300.classpath=\
     ${base}/spring-framework300/spring-webmvc-3.0.6.RELEASE.jar;\
     ${base}/spring-framework300/spring-struts-3.0.6.RELEASE.jar
 libs.spring-framework300.displayName=Spring Framework 3.0.6.RELEASE
-libs.spring-webmvc3.0.classpath=\
-    ${base}/spring-webmvc3.0/spring-webmvc-3.0.6.RELEASE.jar
-libs.spring-webmvc3.0.displayName=Spring Web MVC 3.0.6.RELEASE
