--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,19 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" 
-xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
-            http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-            
-           xmlns:c="http://java.sun.com/jsp/jstl/core"
-           xmlns:fmt="http://java.sun.com/jsp/jstl/fmt">
-               
+<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>/WEB-INF/applicationContext.xml</param-value>
-    </context-param>
-    <context-param>
-        <param-name>javax.faces.PROJECT_STAGE</param-name>
-        <param-value>Development</param-value>
     </context-param>
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -23,46 +12,16 @@ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <load-on-startup>2</load-on-startup>
     </servlet>
-    <!--servlet>
-        <servlet-name>Faces Servlet</servlet-name>
-        <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet-->
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>*.htm</url-pattern>
     </servlet-mapping>
-    <!--servlet-mapping>
-        <servlet-name>Faces Servlet</servlet-name>
-        <url-pattern>/faces/*</url-pattern>
-    </servlet-mapping-->
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
-    <!--welcome-file-list>
-        <welcome-file>faces/redirect.jsp</welcome-file>
-    </welcome-file-list-->
     <welcome-file-list>
-        <welcome-file>dashboard.jsp</welcome-file>
+        <welcome-file>redirect.jsp</welcome-file>
     </welcome-file-list>
-    
-    <!-- Spring Security -->
-    <!--filter>
-            <filter-name>springSecurityFilterChain</filter-name>
-            <filter-class>
-                org.springframework.web.filter.DelegatingFilterProxy
-            </filter-class>
-    </filter>
-
-    <filter-mapping>
-            <filter-name>springSecurityFilterChain</filter-name>
-            <url-pattern>/test*</url-pattern>
-    </filter-mapping-->
-    
-    <!-- 9 july 2012: xmlns:c, xmlns:fmt use forum.springsource.org to solve the error: 
-            http://java...../core not found in web.xml 
-    -->
-        
 </web-app>
